# TurtleEngine

./: .gitignore  CMakeLists.txt  LICENSE  Makefile  imgui.ini  readme.md
include/: Component.h  Game.h  GameObject.h  GameObject.hpp
include/collision_managers/: CollisionManager.hpp  QuadTreeCollisionManager.hpp
include/components/: BoxCollider.hpp  Camera.hpp  Collider.hpp  Component.h  Component.hpp  GameScript.hpp  SphereCollider.hpp  SpriteRenderer.hpp  Transform.h  Transform.hpp  Transformable.hpp
include/scene/: Scene.hpp  SceneEditor.hpp
include/utils/: Maths.hpp  QuadtreeNode.hpp  UtilVariables.hpp
src/: Game.cpp  GameObject.cpp  main.cpp
src/collision_managers/: QuadTreeCollisionManager.cpp
src/components/: BoxCollider.cpp  Camera.cpp  Collider.cpp  SphereCollider.cpp  SpriteRenderer.cpp  Transform.cpp  Transformable.cpp
src/scene/: Scene.cpp  SceneEditor.cpp
src/utils/: Maths.cpp  QuadtreeNode.cpp  UtilVariables.cpp
tests/: test_QuadTreeCollisionManager.cpp  test_Quadtree.cpp  test_colliders.cpp  test_gameobject.cpp  test_math.cpp  test_scene.cpp
